RESOLVED FIXED217867
REGRESSION(r268561): Synthetic oblique text is drawn upside-down
https://bugs.webkit.org/show_bug.cgi?id=217867
Summary REGRESSION(r268561): Synthetic oblique text is drawn upside-down
Myles C. Maxfield
Reported 2020-10-16 20:58:15 PDT
REGRESSION(r268561): Synthetic oblique text is drawn upside-down
Attachments
Patch (5.69 KB, patch)
2020-10-16 21:00 PDT, Myles C. Maxfield
darin: review+
Patch for committing (4.80 KB, patch)
2020-10-16 21:22 PDT, Myles C. Maxfield
no flags
Patch for committing (4.79 KB, patch)
2020-10-16 21:22 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2020-10-16 21:00:06 PDT
Myles C. Maxfield
Comment 2 2020-10-16 21:00:08 PDT
Myles C. Maxfield
Comment 3 2020-10-16 21:22:02 PDT
Created attachment 411652 [details] Patch for committing
Myles C. Maxfield
Comment 4 2020-10-16 21:22:42 PDT
Created attachment 411653 [details] Patch for committing
EWS
Comment 5 2020-10-17 00:06:28 PDT
Committed r268638: <https://trac.webkit.org/changeset/268638> All reviewed patches have been landed. Closing bug and clearing flags on attachment 411653 [details].
Note You need to log in before you can comment on or make changes to this bug.