REGRESSION(r268561): Synthetic oblique text is drawn upside-down https://bugs.webkit.org/show_bug.cgi?id=217867 <rdar://problem/70400846>

Reviewed by Darin Adler.

Source/WebCore:

I made a typo.

Test: fast/text/synthetic-oblique.html

* platform/graphics/FontCascade.h:
(WebCore::FontCascade::syntheticObliqueAngle):
* platform/graphics/coretext/FontCascadeCoreText.cpp:
(WebCore::computeOverallTextMatrix):

LayoutTests:

* fast/text/synthetic-oblique-expected.html: Added.
* fast/text/synthetic-oblique.html: Added.


Canonical link: https://commits.webkit.org/230596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268638 268f45cc-cd09-0410-ab3c-d52691b4dbfc